k8s/users/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users
  namespace: opa-talk
  labels:
    app.kubernetes.io/name: users
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: users
  template:
    metadata:
      labels:
        app.kubernetes.io/name: users
    spec:
      containers:
      - name: users
        image: santiagopoli/opa-talk-users
        resources:
          requests:
            cpu: 100m
            memory: 250M
          limits:
            cpu: 100m
            memory: 250M
        ports:
        - name: http
          containerPort: 8080
